# tina4-python-basic

./: .gitignore  README.md  db.py  pyproject.toml
.READMEs/01_basic/: 00_basic-directory.md  01_initializing.md  02_landing-base-template.md  03_basic-routing.md  04_basic-forms.md  05.1_database-comparisons.md  05_database-basics.md
migrations/: 00001_initial_table_creation.sql  readme.md
src/: __init__.py
src/app/: user_service.py
src/routes/: api.py  main.py
src/templates/: about-us.twig  base.twig  index.twig  navigation.twig
src/templates/forms/pages/: login-form-page.twig
src/templates/forms/parts/: login-form-part.twig
